[package]
name = "vercel-file-explorer-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
base64 = "0.13"
futures-util = "0.3"
bytes = "1.6.0"
chrono = "0.4"